...
                          ),
                        );
                      }
                    },
                  ),
                  ListTile(
                    key: const Key('logoutTile'),
                    leading: const Icon(Icons.logout_outlined),
                    title: const Text('Logout').tr(),
                    onTap: () => context.read<AuthBloc>().add(
                          const AuthEvent.logout(),
                        ),
                  ),
...
